--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,9 @@
   <ul class="list-nav">
     <li routerLink="/" routerLinkActive="true" class="nav-item">Trang chủ</li>
     <li routerLink="/category" class="nav-item">Danh mục</li>
-    <li class="nav-item">Sản phẩm</li>
+    <li routerLink="/product" class="nav-item">Thương hiệu</li>
+    <li routerLink="/product" class="nav-item">Sản phẩm</li>
+    <li routerLink="/product" class="nav-item">Bài viết</li>
+    <li routerLink="/product" class="nav-item">Liên hệ</li>
   </ul>
 </div>
