--- a/src/app/body/components/category/category.component.html
+++ b/src/app/body/components/category/category.component.html
@@ -48,11 +48,17 @@
         (description.length >= 0 && description.length <= 8) ||
         (name.length >= 0 && name.length <= 8)
       "
-      (click)="addNewCategory()"
-      class="btn btn-success"
+      (click)="handleDoUpdate(name,description)"
+      class="btn btn-success mr-3"
     >
       Lưu
     </button>
+    <button *ngIf="isUpdate"
+    (click)="backFromUpdate()"
+    class="btn btn-warning text-white"
+  >
+    Trở về
+  </button>
     </div>
   </div>
   <div class="body-container-content-right">
@@ -68,14 +74,14 @@
           <td>{{ item.name }}</td>
           <td>
             <button
-            class="btn btn-warning mr-3"
+            class="btn btn-warning text-white mr-3"
               (click)="handleUpdateCate(item)"
               label="Show"
             >Sửa</button>
             <!-- <span (click)="deleteCate(item._id)">Xóa</span> -->
             <!-- <span (click)="openDialog('0ms', '0ms')">Xóa</span> -->
             <p-dialog [(visible)]="display">
-              <ng-template pTemplate="header">
+              <ng-template class="text-bold" pTemplate="header">
                  Xóa
               </ng-template>
               Bạn có chắc chắn muốn xóa?
@@ -84,10 +90,10 @@
                 class="btn btn-danger"
                   type="button"
                   label="Show"
-                  (click)="deleteCate(item._id)"
+                  (click)="deleteCate()"
                 >OK</button>
                 <button
-                class="btn btn-warning"
+                class="btn btn-warning text-white"
                   type="button"
                   (click)="display=false"
                   label="Show"
@@ -98,7 +104,7 @@
             class="btn btn-danger"
               [disabled]="idIsUpdated===item._id"
               type="button"
-              (click)="showDialog()"
+              (click)="showDialog(item._id)"
               icon="pi pi-info-circle"
               label="Show"
             >Xóa</button>
