--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,30 +1,54 @@
-.header-nav {
-  height: 60px;
-  width: 100%;
-  background: red;
-  display: flex;
-  align-items: center;
-  padding: 0 100px;
+/* smartphone */
+@media screen and (max-width: 767px) {
 }
-.list-nav {
-  list-style: none;
-  display: flex;
-  width: 100%;
+/* tablet */
+@media screen and (min-width: 767px) and (max-width: 1023px) {
 }
-.nav-item {
-  cursor: pointer;
-  margin-right: 8px;
-  /* border-radius: 6.4px;
-  border: 2px solid white; */
-  padding: 12px;
-  font-size: 14px;
-  font-weight: 500;
-  color: white;
-}
-ul{
-  padding: 0;
-  margin: 0;
-}
-.nav-item:hover {
-
+/* pc */
+@media screen and (min-width: 1024px) {
+  .header-nav {
+    position: sticky;
+    height: 90px;
+    width: 100%;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    padding: 0 100px;
+  }
+  .header {
+    display: flex;
+    justify-content: space-between;
+  }
+  .logoImg{
+    width: 250px;
+  }
+  .logo_icon {
+    height: 50px;
+    width: 153px;
+  }
+  .list-nav {
+    list-style: none;
+    display: flex;
+    width: 100%;
+  }
+  .list-account-group{
+    list-style: none;
+    display: flex;
+  }
+  .nav-item {
+    cursor: pointer;
+    margin-right: 8px;
+    /* border-radius: 6.4px;
+    border: 2px solid white; */
+    padding: 12px;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+  }
+  ul {
+    padding: 0;
+    margin: 0;
+  }
+  .nav-item:hover {
+  }
 }
