--- a/src/app/body/components/home/home.component.html
+++ b/src/app/body/components/home/home.component.html
@@ -1,1 +1,28 @@
-<h1>Trang chủ</h1>
+<app-slider-components></app-slider-components>
+<app-group-product [title]="'Đồng Hồ Nam'"></app-group-product>
+<div class="sologan ">
+  <div class="slogan-wrapp container">
+  <div class="slogan-item">
+    <div class="slogan-item-icon"><fa-icon [icon]="fatruckIcon"></fa-icon></div>
+    <div class="slogan-item-des">
+      <p class="slogan-item-des-title">Miễn phí giao hàng</p>
+      <p class="slogan-item-des-content">Lorem ipsum dolor sit amet, consectetuer</p>
+    </div>
+  </div>
+  <div class="slogan-item">
+    <div class="slogan-item-icon"><fa-icon [icon]="faGiftIcon"></fa-icon></div>
+    <div class="slogan-item-des">
+      <p class="slogan-item-des-title">Quà tặng đặc biết</p>
+      <p class="slogan-item-des-content">Lorem ipsum dolor sit amet, consectetuer</p>
+    </div>
+  </div>
+  <div class="slogan-item">
+    <div class="slogan-item-icon"><fa-icon [icon]="faPiggybankIcon"></fa-icon></div>
+    <div class="slogan-item-des">
+      <p class="slogan-item-des-title">Tiết kiệm mua sắm</p>
+      <p class="slogan-item-des-content">Lorem ipsum dolor sit amet, consectetuer</p>
+    </div>
+  </div>
+</div>
+</div>
+<app-group-product [title]="'Đồng Hồ Nữ'"></app-group-product>
