--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="">
-  <app-header></app-header>
+<div class="app-content">
+  <app-header ></app-header>
   <!-- <app-body></app-body> -->
   <router-outlet></router-outlet>
 
