--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,7 +7,8 @@
 /* pc */
 @media screen and (min-width: 1024px) {
   .header-nav {
-    position: sticky;
+    position: fixed;
+    z-index: 2;
     height: 90px;
     width: 100%;
     background: transparent;
@@ -29,7 +30,7 @@
   .list-nav {
     list-style: none;
     display: flex;
-    width: 100%;
+    width: 60%;
   }
   .list-account-group{
     list-style: none;
@@ -41,7 +42,7 @@
     /* border-radius: 6.4px;
     border: 2px solid white; */
     padding: 12px;
-    font-size: 14px;
+    font-size: 17px;
     font-weight: 500;
     color: white;
   }
